--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -12,14 +12,14 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   
   <!-- Consolidated CSS -->
-  <link rel="stylesheet" href="../frontend/styles/style.css" />
+  <link rel="stylesheet" href="./styles/style.css" />
 </head>
 <body>
   <!-- NAV -->
   <nav class="nav" aria-label="Main navigation">
     <div class="nav-left">
       <a class="brand" href="index.html">
-        <img src="../frontend/images/image.png" alt="GreenTrace logo" class="logo-img" />
+        <img src="./images/image.png" alt="GreenTrace logo" class="logo-img" />
         <span>GreenTrace</span>
       </a>
       <p class="tagline">Track and Celebrate Tree Planting</p>
@@ -89,6 +89,6 @@
    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   
   <!-- Unified JavaScript -->
-  <script src="../frontend/scripts/app.js"></script>
+  <script src="./scripts/app.js"></script>
 </body>
 </html>
