--- a/frontend/index.html
+++ b/frontend/index.html
@@ -104,6 +104,6 @@
       <medium>GreenTrace — For a greener tomorrow 🌿</medium>
     </div>
   </footer>
-  <script src="../frontend/scripts/app.js"></script>
+  <script src="./scripts/app.js"></script>
 </body>
 </html>
