--- a/frontend/leaderboard.html
+++ b/frontend/leaderboard.html
@@ -9,14 +9,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
   <!-- Consolidated CSS -->
-  <link rel="stylesheet" href="../frontend/styles/style.css" />
+  <link rel="stylesheet" href="./styles/style.css" />
 </head>
 <body>
   <!-- NAV -->
   <nav class="nav" aria-label="Main navigation">
     <div class="nav-left">
       <a class="brand" href="index.html">
-        <img src="../frontend/images/image.png" alt="GreenTrace logo" class="logo-img" />
+        <img src="./images/image.png" alt="GreenTrace logo" class="logo-img" />
         <span>GreenTrace</span>
       </a>
       <p class="tagline">Track and Celebrate Tree Planting</p>
@@ -70,6 +70,6 @@
   <div id="toast" class="toast hidden"></div>
 
   <!-- Unified JavaScript -->
-  <script src="../frontend/scripts/app.js"></script>
+  <script src="./scripts/app.js"></script>
 </body>
 </html>
