--- a/frontend/login.html
+++ b/frontend/login.html
@@ -6,7 +6,7 @@
   <title>GreenTrace — Login</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../frontend/styles/style.css" />
+  <link rel="stylesheet" href="./styles/style.css" />
 </head>
 
 <body>
@@ -15,7 +15,7 @@
     <div class="nav-left">
       <!-- Logo image + site name-->
       <a class="brand" aria-label="GreenTrace home">
-        <img src="../frontend/images/image.png" alt="GreenTrace logo" class="logo-img" />
+        <img src="./images/image.png" alt="GreenTrace logo" class="logo-img" />
         <span >GreenTrace</span>
       </a>
       <p class="tagline">Track and Celebrate Tree Planting</p>
@@ -57,6 +57,6 @@
     <small>GreenTrace — track and celebrate tree planting 🌱</small>
   </footer>
 
-  <script src="../frontend/scripts/app.js"></script>
+  <script src="./scripts/app.js"></script>
 </body>
 </html>
