edited add tree styles

--- a/frontend/add-tree.html
+++ b/frontend/add-tree.html
@@ -18,14 +18,14 @@
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.10.0/dist/tf.min.js"></script>
 
   <!-- Consolidated CSS -->
-  <link rel="stylesheet" href="../frontend/styles/style.css" />
+  <link rel="stylesheet" href="./styles/style.css" />
 </head>
 <body>
   <!-- NAV -->
   <nav class="nav" aria-label="Main navigation">
     <div class="nav-left">
       <a class="brand" href="index.html" aria-label="GreenTrace home">
-        <img src="../frontend/images/image.png" alt="GreenTrace logo" class="logo-img" />
+        <img src="./images/image.png" alt="GreenTrace logo" class="logo-img" />
         <span>GreenTrace</span>
       </a>
       <p class="tagline">Track and Celebrate Tree Planting</p>
@@ -108,6 +108,6 @@
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   
   <!-- Unified JavaScript -->
-  <script src="../frontend/scripts/app.js"></script>
+  <script src="./scripts/app.js"></script>
 </body>
 </html>
