Add subscription script and update callback/sub page

--- a/frontend/sub.html
+++ b/frontend/sub.html
@@ -199,6 +199,6 @@
   <div id="toast" class="toast hidden"></div>
 
   <!-- Unified JavaScript -->
-  <script src="./scripts/app.js"></script>
+  <script src="./scripts/subscription.js"></script>
 </body>
 </html>
