added subscription page

--- a/frontend/add-tree.html
+++ b/frontend/add-tree.html
@@ -35,6 +35,7 @@
       <a href="dashboard.html">Dashboard</a> 
       <a href="add-tree.html" aria-current="page" class="nav-link-active">My Trees</a>
       <a href="leaderboard.html">Leaderboard</a>
+      <a href="sub.html">Subscriptions</a>
       <a href="#" onclick="logout()">Logout</a>
       <button id="darkModeToggle" class="dark-toggle" aria-pressed="false" aria-label="Toggle dark mode">🌙</button>
     </div>
