--- a/frontend/leaderboard.html
+++ b/frontend/leaderboard.html
@@ -26,6 +26,7 @@
       <a href="dashboard.html">Dashboard</a>
       <a href="add-tree.html">My Trees</a>
       <a href="leaderboard.html" class="nav-link-active">Leaderboard</a>
+      <a href="sub.html">Subscriptions</a>
       <a href="#" onclick="logout()">Logout</a>
       <button id="darkModeToggle" class="dark-toggle" aria-label="Toggle dark mode">🌙</button>
     </div>
