--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -28,6 +28,7 @@
       <a href="dashboard.html" class="nav-link-active">Dashboard</a>
       <a href="add-tree.html">My Trees</a>
       <a href="leaderboard.html">Leaderboard</a>
+      <a href="sub.html">Subscriptions</a>
       <a href="#" onclick="logout()">Logout</a>
       <button id="darkModeToggle" class="dark-toggle">🌙</button>
     </div>
