--- a/frontend/sub.html
+++ b/frontend/sub.html
@@ -25,8 +25,11 @@
 
     <div class="nav-links">
       <a href="index.html">Home</a>
-      <a href="signup.html" class="btn">Sign Up</a>
-      
+      <a href="dashboard.html">Dashboard</a>
+      <a href="add-tree.html">My Trees</a>
+      <a href="leaderboard.html">Leaderboard</a>
+      <a href="sub.html" style="color:var(--accent); font-weight:bold;">Subscription</a>
+      <a href="#" onclick="logout()">Logout</a>
       <!-- Dark mode toggle -->
       <button id="darkModeToggle" class="dark-toggle" aria-pressed="false" aria-label="Toggle dark mode">🌙</button>
     </div>
