Restore lost features: location fix, planter autofill, tree ownership, readonly name, leaderboard API

--- a/frontend/add-tree.html
+++ b/frontend/add-tree.html
@@ -58,7 +58,7 @@
 
         <label>
           Planter name
-          <input type="text" id="planterName" placeholder="Your full name" required>
+          <input type="text" id="planterName" placeholder="Your full name" required readonly>
         </label>
 
         <label>
